# cc_templates

platformer/: main.py  pyproject.toml
platformer/platformer/: assets.py  level.py  main.py  settings.py  sheetmeta.py  sprites.py
platformer/platformer/cli/: sheetmeta_editor.py
