[project]
name = "platformer"
version = "0.1.0"
description = "A starter platformer game"
readme = "README.md"
authors = [
    { name = "Jon Crall", email = "erotemic@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.1",
    "ubelt>=1.4.0",
    "pillow>=11.3.0",
]

[project.optional-dependencies]

dev = [
    "PyQt5>=5.15.11",
]


[project.scripts]
platformer = "platformer:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "platformer"
module-root = ""
